# colloquium

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: changelog-reminder.sh
.github/workflows/: examples-site.yml  test.yml
colloquium/: __init__.py  build.py  cli.py  deck.py  export.py  parse.py  serve.py  slide.py
colloquium/elements/: __init__.py  box.py  chart.py  conversation.py
colloquium/themes/default/: presentation.js  theme.css
docs/: build.py
examples/: hello.md
examples/animations/: README.md  animations.md
examples/hello/: README.md  hello.html  hello.md  refs.bib
examples/rows-and-columns/: README.md  rows-and-columns.html  rows-and-columns.md
examples/title-slides/: README.md  title-slides.html  title-slides.md
scripts/: build_examples_site.py
src/colloquium/: __init__.py  build.py  cli.py  deck.py  export.py  parse.py  serve.py  slide.py
src/colloquium/themes/default/: presentation.js  theme.css
tests/: test_build.py  test_deck.py  test_examples_site.py  test_export.py  test_parse.py  test_serve.py
