[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colloquium"
version = "0.1.0"
description = "Agent-native slide creation tool for research talks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nathan Lambert" },
]
keywords = ["slides", "presentations", "markdown", "research", "academic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "pyyaml>=6.0",
    "pybtex>=0.24",
]

[project.scripts]
colloquium = "colloquium.cli:main"

[project.urls]
Homepage = "https://github.com/interconnects-ai/colloquium"
Repository = "https://github.com/interconnects-ai/colloquium"

[tool.hatch.build.targets.wheel]
packages = ["colloquium"]

[tool.pytest.ini_options]
testpaths = ["tests"]
